# oif-indicator-pipeline

./: .gitignore  README.md  pyproject.toml
src/oif_indicator_pipeline/: extract_markdown.py
tests/: test_extract_markdown.py
tests/data/: databricks-notebook.py  extracted.html
